--- a/.github/workflows/tf-plan-apply.yaml
+++ b/.github/workflows/tf-plan-apply.yaml
@@ -59,7 +59,7 @@ jobs:
           ARM_CLIENT_SECRET: ${{ steps.azure_credentials.outputs.client_secret }}
           ARM_SUBSCRIPTION_ID: ${{ steps.azure_credentials.outputs.subscription_id }}
           ARM_TENANT_ID: ${{ steps.azure_credentials.outputs.tenant_id }}
-        run: terraform plan -var="location=${{ github.event.inputs.location }}" -var="number_of_ips=${{ github.event.inputs.number_of_ips }}"
+        run: terraform plan -var="location=${{ github.event.inputs.location }}" -var="num_ip_configs=${{ github.event.inputs.num_ip_configs }}"
       
       - name: Terraform Apply
         if: ${{ github.event.inputs.apply }}
