--- a/.github/workflows/tf-plan-apply.yaml
+++ b/.github/workflows/tf-plan-apply.yaml
@@ -30,25 +30,36 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+        - name: Checkout repository
+          uses: actions/checkout@v4
 
-            - name: Azure Authentication
-              id: login
-              uses: azure/login@v2
-              with:
-                creds: ${{ secrets.AZURE_CREDENTIALS }}
+        - name: Azure Authentication
+          id: login
+          uses: azure/login@v2
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-            - name: JSON Parse
-              id: parse
-              env:
-                AZJSON: ${{ secrets.AZJSON }}
-              run: |
-                ARM_CLIENT_ID=$(echo $AZJSON | jq -r '.["clientId"]')
-                ARM_CLIENT_SECRET=$(echo $AZJSON | jq -r '.["clientSecret"]')
-                ARM_TENANT_ID=$(echo $AZJSON | jq -r '.["tenantId"]')
-                ARM_SUBSCRIPTION_ID=$(echo $AZJSON | jq -r '.["subscriptionId"]')
-                echo ARM_CLIENT_ID=$ARM_CLIENT_ID >> $GITHUB_ENV
-                echo ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET >> $GITHUB_ENV
-                echo ARM_TENANT_ID=$ARM_TENANT_ID >> $GITHUB_ENV
-                echo ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID >> $GITHUB_ENV                
+        - name: JSON Parse
+          id: parse
+          env:
+            AZJSON: ${{ secrets.AZJSON }}
+          run: |
+            ARM_CLIENT_ID=$(echo $AZJSON | jq -r '.["clientId"]')
+            ARM_CLIENT_SECRET=$(echo $AZJSON | jq -r '.["clientSecret"]')
+            ARM_TENANT_ID=$(echo $AZJSON | jq -r '.["tenantId"]')
+            ARM_SUBSCRIPTION_ID=$(echo $AZJSON | jq -r '.["subscriptionId"]')
+            echo ARM_CLIENT_ID=$ARM_CLIENT_ID >> $GITHUB_ENV
+            echo ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET >> $GITHUB_ENV
+            echo ARM_TENANT_ID=$ARM_TENANT_ID >> $GITHUB_ENV
+            echo ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID >> $GITHUB_ENV                
+
+        - name: Install Terraform
+          uses: hashicorp/setup-terraform@v3.1.1
+          with:
+            terraform_version: 1.8.5
+    
+    # Here terraform init is run directly on the runner's shell. 
+        - name: Terraform Init
+          id: init
+          run: |
+            terraform init
